--- a/internal/static/style/output.css
+++ b/internal/static/style/output.css
@@ -508,136 +508,101 @@ html {
 
 :root {
   color-scheme: light;
-  --in: 0.7206 0.191 231.6;
-  --su: 64.8% 0.150 160;
-  --wa: 0.8471 0.199 83.87;
-  --er: 0.7176 0.221 22.18;
-  --pc: 0.89824 0.06192 275.75;
-  --ac: 0.15352 0.0368 183.61;
-  --inc: 0 0 0;
-  --suc: 0 0 0;
-  --wac: 0 0 0;
-  --erc: 0 0 0;
-  --rounded-box: 1rem;
-  --rounded-btn: 0.5rem;
-  --rounded-badge: 1.9rem;
+  --pc: 0.118872 0.015449 254.027774;
+  --sc: 0.139303 0.011822 248.687186;
+  --ac: 0.154929 0.01245 217.469017;
+  --inc: 0.138414 0.012499 332.664922;
+  --suc: 0.153654 0.01498 131.063061;
+  --wac: 0.170972 0.017847 84.093335;
+  --erc: 0.12122 0.024119 15.341883;
   --animation-btn: 0.25s;
   --animation-input: .2s;
   --btn-focus-scale: 0.95;
   --border-btn: 1px;
   --tab-border: 1px;
-  --tab-radius: 0.5rem;
-  --p: 0.4912 0.3096 275.75;
-  --s: 0.6971 0.329 342.55;
-  --sc: 0.9871 0.0106 342.55;
-  --a: 0.7676 0.184 183.61;
-  --n: 0.321785 0.02476 255.701624;
-  --nc: 0.894994 0.011585 252.096176;
-  --b1: 1 0 0;
-  --b2: 0.961151 0 0;
-  --b3: 0.924169 0.00108 197.137559;
-  --bc: 0.278078 0.029596 256.847952;
+  --p: 0.594359 0.077246 254.027774;
+  --s: 0.696516 0.059108 248.687186;
+  --a: 0.774643 0.062249 217.469017;
+  --n: 0.45229 0.035214 264.1312;
+  --nc: 0.899258 0.016374 262.749256;
+  --b1: 0.951276 0.007445 260.731539;
+  --b2: 0.932996 0.010389 261.788485;
+  --b3: 0.899258 0.016374 262.749256;
+  --bc: 0.324374 0.022945 264.182036;
+  --in: 0.692072 0.062496 332.664922;
+  --su: 0.76827 0.074899 131.063061;
+  --wa: 0.854862 0.089234 84.093335;
+  --er: 0.6061 0.120594 15.341883;
+  --rounded-box: 0.4rem;
+  --rounded-btn: 0.2rem;
+  --rounded-badge: 0.4rem;
+  --tab-radius: 0.2rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color-scheme: dark;
-    --in: 0.7206 0.191 231.6;
-    --su: 64.8% 0.150 160;
-    --wa: 0.8471 0.199 83.87;
-    --er: 0.7176 0.221 22.18;
-    --pc: 0.13138 0.0392 275.75;
-    --sc: 0.1496 0.052 342.55;
-    --ac: 0.14902 0.0334 183.61;
-    --inc: 0 0 0;
-    --suc: 0 0 0;
-    --wac: 0 0 0;
-    --erc: 0 0 0;
-    --rounded-box: 1rem;
-    --rounded-btn: 0.5rem;
-    --rounded-badge: 1.9rem;
-    --animation-btn: 0.25s;
-    --animation-input: .2s;
-    --btn-focus-scale: 0.95;
-    --border-btn: 1px;
-    --tab-border: 1px;
-    --tab-radius: 0.5rem;
-    --p: 0.6569 0.196 275.75;
-    --s: 0.748 0.26 342.55;
-    --a: 0.7451 0.167 183.61;
-    --n: 0.313815 0.021108 254.139175;
-    --nc: 0.746477 0.0216 264.435964;
-    --b1: 0.253267 0.015896 252.417568;
-    --b2: 0.232607 0.013807 253.100675;
-    --b3: 0.211484 0.01165 254.087939;
-    --bc: 0.746477 0.0216 264.435964;
-  }
-}
-
-[data-theme=light] {
+[data-theme=nord] {
   color-scheme: light;
-  --in: 0.7206 0.191 231.6;
-  --su: 64.8% 0.150 160;
-  --wa: 0.8471 0.199 83.87;
-  --er: 0.7176 0.221 22.18;
-  --pc: 0.89824 0.06192 275.75;
-  --ac: 0.15352 0.0368 183.61;
-  --inc: 0 0 0;
-  --suc: 0 0 0;
-  --wac: 0 0 0;
-  --erc: 0 0 0;
-  --rounded-box: 1rem;
-  --rounded-btn: 0.5rem;
-  --rounded-badge: 1.9rem;
+  --pc: 0.118872 0.015449 254.027774;
+  --sc: 0.139303 0.011822 248.687186;
+  --ac: 0.154929 0.01245 217.469017;
+  --inc: 0.138414 0.012499 332.664922;
+  --suc: 0.153654 0.01498 131.063061;
+  --wac: 0.170972 0.017847 84.093335;
+  --erc: 0.12122 0.024119 15.341883;
   --animation-btn: 0.25s;
   --animation-input: .2s;
   --btn-focus-scale: 0.95;
   --border-btn: 1px;
   --tab-border: 1px;
-  --tab-radius: 0.5rem;
-  --p: 0.4912 0.3096 275.75;
-  --s: 0.6971 0.329 342.55;
-  --sc: 0.9871 0.0106 342.55;
-  --a: 0.7676 0.184 183.61;
-  --n: 0.321785 0.02476 255.701624;
-  --nc: 0.894994 0.011585 252.096176;
-  --b1: 1 0 0;
-  --b2: 0.961151 0 0;
-  --b3: 0.924169 0.00108 197.137559;
-  --bc: 0.278078 0.029596 256.847952;
+  --p: 0.594359 0.077246 254.027774;
+  --s: 0.696516 0.059108 248.687186;
+  --a: 0.774643 0.062249 217.469017;
+  --n: 0.45229 0.035214 264.1312;
+  --nc: 0.899258 0.016374 262.749256;
+  --b1: 0.951276 0.007445 260.731539;
+  --b2: 0.932996 0.010389 261.788485;
+  --b3: 0.899258 0.016374 262.749256;
+  --bc: 0.324374 0.022945 264.182036;
+  --in: 0.692072 0.062496 332.664922;
+  --su: 0.76827 0.074899 131.063061;
+  --wa: 0.854862 0.089234 84.093335;
+  --er: 0.6061 0.120594 15.341883;
+  --rounded-box: 0.4rem;
+  --rounded-btn: 0.2rem;
+  --rounded-badge: 0.4rem;
+  --tab-radius: 0.2rem;
 }
 
-[data-theme=dark] {
+[data-theme=sunset] {
   color-scheme: dark;
-  --in: 0.7206 0.191 231.6;
-  --su: 64.8% 0.150 160;
-  --wa: 0.8471 0.199 83.87;
-  --er: 0.7176 0.221 22.18;
-  --pc: 0.13138 0.0392 275.75;
-  --sc: 0.1496 0.052 342.55;
-  --ac: 0.14902 0.0334 183.61;
-  --inc: 0 0 0;
-  --suc: 0 0 0;
-  --wac: 0 0 0;
-  --erc: 0 0 0;
-  --rounded-box: 1rem;
-  --rounded-btn: 0.5rem;
-  --rounded-badge: 1.9rem;
+  --pc: 0.149408 0.031656 39.94703;
+  --sc: 0.145075 0.035531 2.72034;
+  --ac: 0.142589 0.033336 299.844533;
+  --inc: 0.171119 0.017054 206.015183;
+  --suc: 0.171122 0.017172 144.77874;
+  --wac: 0.171139 0.016961 74.427797;
+  --erc: 0.171023 0.015778 16.886379;
   --animation-btn: 0.25s;
   --animation-input: .2s;
   --btn-focus-scale: 0.95;
   --border-btn: 1px;
   --tab-border: 1px;
-  --tab-radius: 0.5rem;
-  --p: 0.6569 0.196 275.75;
-  --s: 0.748 0.26 342.55;
-  --a: 0.7451 0.167 183.61;
-  --n: 0.313815 0.021108 254.139175;
-  --nc: 0.746477 0.0216 264.435964;
-  --b1: 0.253267 0.015896 252.417568;
-  --b2: 0.232607 0.013807 253.100675;
-  --b3: 0.211484 0.01165 254.087939;
-  --bc: 0.746477 0.0216 264.435964;
+  --p: 0.747039 0.158278 39.94703;
+  --s: 0.725375 0.177654 2.72034;
+  --a: 0.712947 0.166678 299.844533;
+  --n: 0.26 0.019 237.69;
+  --nc: 0.7 0.019 237.69;
+  --b1: 0.22 0.019 237.69;
+  --b2: 0.2 0.019 237.69;
+  --b3: 0.18 0.019 237.69;
+  --bc: 0.773835 0.043586 245.096534;
+  --in: 0.855596 0.085271 206.015183;
+  --su: 0.855609 0.08586 144.77874;
+  --wa: 0.855695 0.084806 74.427797;
+  --er: 0.855116 0.07889 16.886379;
+  --rounded-box: 1.2rem;
+  --rounded-btn: 0.8rem;
+  --rounded-badge: 0.4rem;
+  --tab-radius: 0.7rem;
 }
 
 *, ::before, ::after {
@@ -2196,11 +2161,6 @@ html {
   grid-row-start: 1;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -2279,11 +2239,6 @@ html {
   border-radius: 9999px;
 }
 
-.bg-accent {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-a,oklch(var(--a)/var(--tw-bg-opacity)));
-}
-
 .bg-base-100 {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity)));
@@ -2292,6 +2247,11 @@ html {
 .bg-base-200 {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity)));
+}
+
+.bg-base-300 {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-bg-opacity)));
 }
 
 .bg-base-content {
@@ -2341,6 +2301,11 @@ html {
 
 .font-bold {
   font-weight: 700;
+}
+
+.text-base-content {
+  --tw-text-opacity: 1;
+  color: var(--fallback-bc,oklch(var(--bc)/var(--tw-text-opacity)));
 }
 
 .shadow {
