--- a/pkg/component/navbar.templ
+++ b/pkg/component/navbar.templ
@@ -1,7 +1,18 @@
 package component
 
 templ Navbar() {
-	<div class="navbar bg-base-100 fixed top-0">
+	@navbarScript()
+	<div class="navbar bg-base-300 fixed top-0">
 		{ children... }
 	</div>
+}
+
+templ navbarScript() {
+	<script>
+	window.addEventListener("DOMContentLoaded", function() {
+		var navbar = document.querySelector(".navbar");
+		var navbarHeight = navbar.offsetHeight;
+		document.body.style.paddingTop = `${navbarHeight}px`;
+	});
+	</script>
 }
