--- a/internal/views/homePage.templ
+++ b/internal/views/homePage.templ
@@ -2,17 +2,17 @@ package views
 
 import "github.com/muhhae/lorem-ipsum/pkg/template"
 import "github.com/muhhae/lorem-ipsum/pkg/component"
+import "github.com/drhodes/golorem"
 
 templ HomePage() {
 	@template.Base("Lorem Ipsum") {
 		@navBar()
-		<div class="bg-base p-10">
-			<button type="button" onclick="modal_1.showModal()" class="btn">Open Modal</button>
-			@component.ResponsiveModal("modal_1") {
-				<h3 class="font-bold text-3xl">
-					Hello World??
-				</h3>
-			}
+		<div class="p-10">
+			<div class="w-2/5 mx-auto">
+				for i := 0; i < 10; i++ {
+					@card(lorem.Sentence(1,3), lorem.Paragraph(1,3))
+				}
+			</div>
 		</div>
 	}
 }
@@ -20,7 +20,7 @@ templ HomePage() {
 templ navBar() {
 	@component.Navbar() {
 		<div class="flex-1">
-			<a class="btn btn-ghost text-base-content text-xl">Lorem Ipsum</a>
+			<a class="btn btn-ghost text-base-content font-black text-3xl">Lorem Ipsum</a>
 		</div>
 		<div class="flex-none flex space-x-4">
 			<label class="cursor-pointer grid place-items-center">
@@ -55,4 +55,25 @@ templ navBar() {
 			</div>
 		</div>
 	}
+}
+
+templ card(title string, content string) {
+	<div class="w-full card mb-10 bg-transparent border-2 p-4 border-primary text-base-content">
+		<figure class="w-full h-full">
+			<img class="w-full h-full object-cover" src="https://daisyui.com/images/stock/photo-1494232410401-ad00d5433cfa.jpg" alt="Album"/>
+		</figure>
+		<div class="card-body ">
+			<h2 class="card-title text-base-content font-bold">{ title }</h2>
+			{ content }
+		</div>
+		<div class="card-actions flex justify-end">
+			<button class="btn btn-sm border-0 shadow-none bg-transparent hover:bg-transparent w-16 h-16">
+				<svg class="w-full h-full hover:text-primary object-cover" fill="currentColor" height="256px" width="256px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" transform="rotate(180)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><g><g><path d="M117.333,10.667h-64C23.936,10.667,0,34.603,0,64v170.667C0,264.064,23.936,288,53.333,288H160 c5.888,0,10.667-4.779,10.667-10.667V64C170.667,34.603,146.731,10.667,117.333,10.667z"></path> <path d="M512,208c0-18.496-10.603-34.731-26.347-42.667c3.285-6.549,5.013-13.781,5.013-21.333 c0-18.496-10.603-34.752-26.368-42.688c4.864-9.728,6.293-20.928,3.84-32.043C463.36,47.68,443.051,32,419.819,32H224 c-7.232,0-16.405,1.173-25.771,3.285c-5.739,1.301-9.344,6.976-8.064,12.693C191.403,53.632,192,58.859,192,64v213.333 c0,5.739-1.6,11.264-4.736,16.448c-1.835,3.029-2.048,6.763-0.555,9.984l47.957,103.893v72.32c0,3.243,1.472,6.293,3.989,8.341 c0.683,0.555,16.512,13.013,38.677,13.013c24.683,0,64-39.061,64-85.333c0-29.184-10.453-65.515-16.96-85.333h131.755 c28.715,0,53.141-21.248,55.637-48.341c1.387-15.189-3.669-29.824-13.632-40.725C506.901,232.768,512,220.821,512,208z"></path> </g> </g> </g> </g></svg>
+				
+			</button>
+			<button class="btn btn-sm border-0 shadow-none w-16 h-16 bg-transparent hover:bg-transparent">
+				<svg class="w-full h-full hover:text-primary object-cover" fill="currentColor" height="256px" width="256px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><g><g><path d="M117.333,10.667h-64C23.936,10.667,0,34.603,0,64v170.667C0,264.064,23.936,288,53.333,288H160 c5.888,0,10.667-4.779,10.667-10.667V64C170.667,34.603,146.731,10.667,117.333,10.667z"></path> <path d="M512,208c0-18.496-10.603-34.731-26.347-42.667c3.285-6.549,5.013-13.781,5.013-21.333 c0-18.496-10.603-34.752-26.368-42.688c4.864-9.728,6.293-20.928,3.84-32.043C463.36,47.68,443.051,32,419.819,32H224 c-7.232,0-16.405,1.173-25.771,3.285c-5.739,1.301-9.344,6.976-8.064,12.693C191.403,53.632,192,58.859,192,64v213.333 c0,5.739-1.6,11.264-4.736,16.448c-1.835,3.029-2.048,6.763-0.555,9.984l47.957,103.893v72.32c0,3.243,1.472,6.293,3.989,8.341 c0.683,0.555,16.512,13.013,38.677,13.013c24.683,0,64-39.061,64-85.333c0-29.184-10.453-65.515-16.96-85.333h131.755 c28.715,0,53.141-21.248,55.637-48.341c1.387-15.189-3.669-29.824-13.632-40.725C506.901,232.768,512,220.821,512,208z"></path> </g> </g> </g> </g></svg>
+			</button>
+		</div>
+	</div>
 }
