--- a/pkg/component/navbar.templ
+++ b/pkg/component/navbar.templ
@@ -2,17 +2,15 @@ package component
 
 templ Navbar() {
 	@navbarScript()
-	<div class="navbar bg-base-300 fixed top-0">
+	<div class="navbar bg-base-300 fixed top-0 z-50">
 		{ children... }
 	</div>
 }
 
-templ navbarScript() {
-	<script>
+script navbarScript() {
 	window.addEventListener("DOMContentLoaded", function() {
 		var navbar = document.querySelector(".navbar");
 		var navbarHeight = navbar.offsetHeight;
 		document.body.style.paddingTop = `${navbarHeight}px`;
 	});
-	</script>
 }
