--- a/internal/views/login/index.templ
+++ b/internal/views/login/index.templ
@@ -1,8 +1,8 @@
-package views
+package login
 
 import "github.com/muhhae/lorem-ipsum/pkg/template"
 
-templ LoginPage() {
+templ Index() {
 	@template.Base("Login") {
 		<div class="hero min-h-screen bg-base-200">
 			<div class="hero-content flex-col lg:flex-row-reverse">
