--- a/pkg/template/base.templ
+++ b/pkg/template/base.templ
@@ -7,7 +7,7 @@ templ Base(title string) {
 			<title>{ title }</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<meta charset="UTF-8"/>
-			<link rel="stylesheet" href="/static/style/output.css"/>
+			<link rel="stylesheet" href="/api/v1/static/style/output.css"/>
 		</head>
 		<body>
 			{ children... }
