--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -1,65 +1,8 @@
-package views
+package home
 
-import "github.com/muhhae/lorem-ipsum/pkg/template"
-import "github.com/muhhae/lorem-ipsum/pkg/component"
-import "github.com/drhodes/golorem"
-import "math/rand"
 import "github.com/muhhae/lorem-ipsum/internal/views/util"
 
-templ HomePage() {
-	@template.Base("Lorem Ipsum") {
-		@navBar()
-		<div class="p-10">
-			<div class="lg:w-2/5 mx-auto">
-				for i := 0; i < 10; i++ {
-					@card(lorem.Sentence(1,3), lorem.Paragraph(1,3), rand.Intn(999999), rand.Intn(999999))
-				}
-			</div>
-		</div>
-	}
-}
-
-templ navBar() {
-	@component.Navbar() {
-		<div class="flex-1">
-			<a class="btn btn-ghost text-base-content font-black text-3xl">Lorem Ipsum</a>
-		</div>
-		<div class="flex-none flex space-x-4">
-			<label class="cursor-pointer grid place-items-center">
-				<script src="/static/script/themeController.js"></script>
-				<input type="checkbox" light="nord" dark="sunset" class="toggle my-theme bg-base-content row-start-1 col-start-1 col-span-2"/>
-				<svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"></path></svg>
-				<svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
-			</label>
-			<div class="dropdown dropdown-end">
-				<div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-					<div class="w-10 rounded-full">
-						<img
-							alt="Tailwind CSS Navbar component"
-							src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg"
-						/>
-					</div>
-				</div>
-				<ul
-					tabindex="0"
-					class="menu menu-sm dropdown-content mt-3 z-[1] 
-                        p-2 shadow bg-base-100 rounded-box w-52"
-				>
-					<li>
-						<a class="justify-between">
-							Profile
-							<span class="badge">New</span>
-						</a>
-					</li>
-					<li><a>Settings</a></li>
-					<li><a>Logout</a></li>
-				</ul>
-			</div>
-		</div>
-	}
-}
-
-templ card(title string, content string, likeCount int, commentCount int) {
+templ Post(title string, content string, likeCount int, commentCount int) {
 	<div class="w-full card mb-10 bg-transparent border-2 p-4 border-primary text-base-content">
 		<figure class="w-full h-full">
 			<img class="w-full h-full object-cover" src="https://daisyui.com/images/stock/photo-1494232410401-ad00d5433cfa.jpg" alt="Album"/>
