--- a/internal/views/shared/navbar.templ
+++ b/internal/views/shared/navbar.templ
@@ -2,41 +2,7 @@ package shared
 
 import "github.com/muhhae/lorem-ipsum/pkg/component"
 
-script themeToggle() {
-	document.addEventListener('DOMContentLoaded', (event) => {
-		var themeController = document.querySelector('.my-theme');
-		if (!themeController) return;
-		dark = themeController.getAttribute('dark') ? themeController.getAttribute('dark') : 'dark'
-		light = themeController.getAttribute('light') ? themeController.getAttribute('light') : 'light'
-		var theme = localStorage.getItem('theme');
-		if (theme) {
-			document.documentElement.setAttribute('data-theme', theme)
-			if (theme == "dark") {
-				themeController.checked = true;
-				document.documentElement.setAttribute('data-theme', dark)
-			} else {
-				themeController.checked = false;
-				document.documentElement.setAttribute('data-theme', light)
-			}
-		} else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-			themeController.checked = true;
-			document.documentElement.setAttribute('data-theme', dark)
-			localStorage.setItem('theme', "dark")
-		} else {
-			document.documentElement.setAttribute('data-theme', light)
-			localStorage.setItem('theme', "light")
-		}
-		themeController.addEventListener('change', function (e) {
-			if (e.currentTarget.checked) {
-				document.documentElement.setAttribute('data-theme', dark)
-				localStorage.setItem('theme', "dark")
-			} else {
-				document.documentElement.setAttribute('data-theme', light)
-				localStorage.setItem('theme', "light")
-			}
-		})
-	});
-}
+
 
 templ NavBar() {
 	@component.Navbar() {
@@ -44,12 +10,7 @@ templ NavBar() {
 			<a class="btn btn-ghost text-base-content font-black text-3xl">Lorem Ipsum</a>
 		</div>
 		<div class="flex-none flex space-x-4">
-			<label class="cursor-pointer grid place-items-center">
-				@themeToggle()
-				<input type="checkbox" light="nord" dark="sunset" class="toggle my-theme bg-base-content row-start-1 col-start-1 col-span-2"/>
-				<svg class="col-start-1 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"></circle><path d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"></path></svg>
-				<svg class="col-start-2 row-start-1 stroke-base-100 fill-base-100" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path></svg>
-			</label>
+			@component.ThemeSwitch()
 			<div class="dropdown dropdown-end">
 				<div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
 					<div class="w-10 rounded-full">
