--- a/internal/views/login/index.templ
+++ b/internal/views/login/index.templ
@@ -5,6 +5,7 @@ import "github.com/muhhae/lorem-ipsum/pkg/component"
 
 templ Index() {
 	@template.Base("Sign in") {
+		<div hx-get="/api/v1/user/session" hx-trigger="load" hx-swap="none"></div> <!-- check if user is logged in -->
 		<div class="relative hero min-h-screen bg-base-200">
 			<div class="flex absolute p-4 top-0 right-0 w-screen">
 				<div class="flex-1">
