--- a/internal/views/register/index.templ
+++ b/internal/views/register/index.templ
@@ -5,6 +5,7 @@ import "github.com/muhhae/lorem-ipsum/pkg/component"
 
 templ Index() {
 	@template.Base("Sign Up") {
+		<div hx-get="/api/v1/user/session" hx-trigger="load" hx-swap="none"></div> <!-- check if user is logged in -->
 		<div class="relative hero min-h-screen bg-base-200">
 			<div class="flex absolute p-4 top-0 right-0 w-screen">
 				<div class="flex-1">
@@ -23,7 +24,7 @@ templ Index() {
 					<form
 						hx-post="/api/v1/user/register"
 						hx-on::response-error="alert(event.detail.xhr.responseText)"
-						hx-swap="None"
+						hx-swap="none"
 						class="card-body"
 					>
 						<div class="form-control">
@@ -63,24 +64,17 @@ templ Index() {
 								required
 							/>
 						</div>
-						<div class="form-control">
-							<label for="confirm-password" class="label">
-								<span class="label-text">Confirm Password</span>
-							</label>
-							<input
-								id="confirm-password"
-								name="confirm-password"
-								type="password"
-								placeholder="confirm password"
-								class="input password-input input-bordered"
-								required
-							/>
-						</div>
-                        @component.TogglePass()
+						@component.TogglePass()
 						<div class="form-control mt-6">
 							<button class="text-lg  btn btn-primary">Sign Up</button>
 						</div>
 					</form>
+					<div class="divider">
+						or
+					</div>
+					<div class="card-body">
+						<a class="text-lg btn btn-primary" href="/login">Sign In</a>
+					</div>
 				</div>
 			</div>
 		</div>
