--- a/internal/views/home/index.templ
+++ b/internal/views/home/index.templ
@@ -8,7 +8,8 @@ import "github.com/muhhae/lorem-ipsum/internal/views/shared"
 templ Index() {
 	@template.Base("Lorem Ipsum") {
 		@shared.NavBar()
-		<div class="p-2 md:p-10">
+		<div class="p-2 md:p-10 md:pt-3">
+			@Form()
 			<div class="lg:w-2/5 mx-auto">
 				for i := 0; i < 10; i++ {
 					@Post(lorem.Sentence(1,3), lorem.Paragraph(1,3), rand.Intn(999999), rand.Intn(999999))
