--- a/internal/views/register/index.templ
+++ b/internal/views/register/index.templ
@@ -7,16 +7,17 @@ templ Index() {
 	@template.Base("Sign Up") {
 		<div hx-get="/api/v1/user/session" hx-trigger="load" hx-swap="none"></div> <!-- check if user is logged in -->
 		<div class="relative hero min-h-screen bg-base-200">
-			<div class="flex absolute p-4 top-0 right-0 w-screen z-50">
-				<div class="flex-1">
-					<a class="text-base-content font-black text-2xl md:text-3xl">Lorem Ipsum </a>
-				</div>
-				<div class="flex-0">
-					@component.ThemeSwitch()
-				</div>
+			<div class="flex absolute p-4 top-0 right-0 z-50">
+				@component.ThemeSwitch()
 			</div>
 			<div class="hero-content md:pt-0 pt-20 flex-col md:flex-row-reverse">
 				<div class="text-center lg:text-left">
+					<a
+						href="/"
+						class="btn btn-ghost hover:bg-transparent hover:text-primary mb-8 w-56 h-auto p-2 text-base-content font-black text-5xl md:text-7xl"
+					>
+						Lorem Ipsum 
+					</a>
 					<h1 class="text-2xl md:text-5xl font-bold">Sign Up Now!</h1>
 					<p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
 				</div>
