updating ui a bit

--- a/internal/views/home/form.templ
+++ b/internal/views/home/form.templ
@@ -4,7 +4,6 @@ templ Form() {
 	<form
 		id="post-form"
 		class="lg:w-2/5 text-xl mx-auto card-body"
-		
 	>
 		<div class="form-control">
 			<label for="content" class="label">
@@ -37,7 +36,9 @@ templ Form() {
 				</label>
 			</div>
 			<div class="flex-none form-control">
-				<button type="submit" class="btn btn-primary text-lg">Post</button>
+				<button type="submit" class="btn btn-primary text-lg">
+					Post
+				</button>
 			</div>
 		</div>
 		<div id="selected-images"></div>
