--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -66,7 +66,7 @@ templ ManyPost(postDatas []PostData, iteration int) {
 					/>
 				</figure>
 			}
-			<div class="card-body ">
+			<div class="card-body mt-4 p-2">
 				<h2 class="card-title text-base-content font-bold">{ postData.Username }</h2>
 				{ postData.Content }
 			</div>
@@ -87,7 +87,7 @@ templ ManyPost(postDatas []PostData, iteration int) {
 
 templ ReactSection(reactData ReactData) {
 	<div
-		class="react-section card-actions flex flex-col sm:flex-row w-full items-center justify-center mb-4"
+		class="react-section card-actions flex flex-col sm:flex-row w-full items-center justify-center my-4"
 	>
 		@LikeButton(reactData.Value == 1, reactData.PostID)
 		@LikeCount(reactData.LikeCount, reactData.PostID)
@@ -112,7 +112,7 @@ templ LikeButton(liked bool, postID string) {
 			hx-post={ "/api/v1/reaction/react/" + postID + "?value=0" }
 			hx-swap="none"
 			hx-on::after-on-load="reactAndRefresh(event)"
-			class="like btn text-primary btn-ghost btn-md text-xl w-40"
+			class="like btn text-primary btn-ghost btn-lg text-2xl w-auto"
 		>
 			<svg class="h-3/4" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="currentColor"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>arrow-up-circle</title> <desc>Created with Sketch Beta.</desc> <defs></defs> <g id="Page-1" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd" sketch:type="MSPage"><g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-362.000000, -1089.000000)" fill="currentColor"><path d="M384.535,1105.54 C384.145,1105.93 383.512,1105.93 383.121,1105.54 L379,1101.41 L379,1112 C379,1112.55 378.553,1113 378,1113 C377.447,1113 377,1112.55 377,1112 L377,1101.41 L372.879,1105.54 C372.488,1105.93 371.854,1105.93 371.465,1105.54 C371.074,1105.14 371.074,1104.51 371.465,1104.12 L377.121,1098.46 C377.361,1098.22 377.689,1098.15 378,1098.21 C378.311,1098.15 378.639,1098.22 378.879,1098.46 L384.535,1104.12 C384.926,1104.51 384.926,1105.14 384.535,1105.54 L384.535,1105.54 Z M378,1089 C369.163,1089 362,1096.16 362,1105 C362,1113.84 369.163,1121 378,1121 C386.837,1121 394,1113.84 394,1105 C394,1096.16 386.837,1089 378,1089 L378,1089 Z" id="arrow-up-circle" sketch:type="MSShapeGroup"></path> </g> </g> </g></svg>
 			Yahaha
@@ -122,7 +122,7 @@ templ LikeButton(liked bool, postID string) {
 			hx-post={ "/api/v1/reaction/react/" + postID + "?value=1" }
 			hx-swap="none"
 			hx-on::after-on-load="reactAndRefresh(event)"
-			class="like btn btn-ghost btn-md text-xl w-40"
+			class="like btn btn-ghost btn-lg text-2xl w-auto"
 		>
 			<svg class="h-3/4" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="currentColor"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>arrow-up-circle</title> <desc>Created with Sketch Beta.</desc> <defs></defs> <g id="Page-1" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd" sketch:type="MSPage"><g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-362.000000, -1089.000000)" fill="currentColor"><path d="M384.535,1105.54 C384.145,1105.93 383.512,1105.93 383.121,1105.54 L379,1101.41 L379,1112 C379,1112.55 378.553,1113 378,1113 C377.447,1113 377,1112.55 377,1112 L377,1101.41 L372.879,1105.54 C372.488,1105.93 371.854,1105.93 371.465,1105.54 C371.074,1105.14 371.074,1104.51 371.465,1104.12 L377.121,1098.46 C377.361,1098.22 377.689,1098.15 378,1098.21 C378.311,1098.15 378.639,1098.22 378.879,1098.46 L384.535,1104.12 C384.926,1104.51 384.926,1105.14 384.535,1105.54 L384.535,1105.54 Z M378,1089 C369.163,1089 362,1096.16 362,1105 C362,1113.84 369.163,1121 378,1121 C386.837,1121 394,1113.84 394,1105 C394,1096.16 386.837,1089 378,1089 L378,1089 Z" id="arrow-up-circle" sketch:type="MSShapeGroup"></path> </g> </g> </g></svg>
 			Yahaha
@@ -136,7 +136,7 @@ templ DislikeButton(disliked bool, postID string) {
 			hx-post={ "/api/v1/reaction/react/" + postID + "?value=0" }
 			hx-swap="none"
 			hx-on::after-on-load="reactAndRefresh(event)"
-			class="dislike btn btn-ghost text-primary btn-md text-xl w-40"
+			class="dislike btn btn-ghost text-primary btn-lg text-2xl w-auto"
 		>
 			<svg class="sm:hidden block h-3/4" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="currentColor" transform="matrix(1, 0, 0, -1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>arrow-up-circle</title> <desc>Created with Sketch Beta.</desc> <defs></defs> <g id="Page-1" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd" sketch:type="MSPage"><g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-362.000000, -1089.000000)" fill="currentColor"><path d="M384.535,1105.54 C384.145,1105.93 383.512,1105.93 383.121,1105.54 L379,1101.41 L379,1112 C379,1112.55 378.553,1113 378,1113 C377.447,1113 377,1112.55 377,1112 L377,1101.41 L372.879,1105.54 C372.488,1105.93 371.854,1105.93 371.465,1105.54 C371.074,1105.14 371.074,1104.51 371.465,1104.12 L377.121,1098.46 C377.361,1098.22 377.689,1098.15 378,1098.21 C378.311,1098.15 378.639,1098.22 378.879,1098.46 L384.535,1104.12 C384.926,1104.51 384.926,1105.14 384.535,1105.54 L384.535,1105.54 Z M378,1089 C369.163,1089 362,1096.16 362,1105 C362,1113.84 369.163,1121 378,1121 C386.837,1121 394,1113.84 394,1105 C394,1096.16 386.837,1089 378,1089 L378,1089 Z" id="arrow-up-circle" sketch:type="MSShapeGroup"></path> </g> </g> </g></svg>
 			Ahahay
@@ -147,7 +147,7 @@ templ DislikeButton(disliked bool, postID string) {
 			hx-post={ "/api/v1/reaction/react/" + postID + "?value=-1" }
 			hx-swap="none"
 			hx-on::after-on-load="reactAndRefresh(event)"
-			class="dislike btn btn-ghost btn-md text-xl w-40"
+			class="dislike btn btn-ghost btn-lg text-2xl w-auto"
 		>
 			<svg class="sm:hidden block h-3/4" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="currentColor" transform="matrix(1, 0, 0, -1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>arrow-up-circle</title> <desc>Created with Sketch Beta.</desc> <defs></defs> <g id="Page-1" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd" sketch:type="MSPage"><g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-362.000000, -1089.000000)" fill="currentColor"><path d="M384.535,1105.54 C384.145,1105.93 383.512,1105.93 383.121,1105.54 L379,1101.41 L379,1112 C379,1112.55 378.553,1113 378,1113 C377.447,1113 377,1112.55 377,1112 L377,1101.41 L372.879,1105.54 C372.488,1105.93 371.854,1105.93 371.465,1105.54 C371.074,1105.14 371.074,1104.51 371.465,1104.12 L377.121,1098.46 C377.361,1098.22 377.689,1098.15 378,1098.21 C378.311,1098.15 378.639,1098.22 378.879,1098.46 L384.535,1104.12 C384.926,1104.51 384.926,1105.14 384.535,1105.54 L384.535,1105.54 Z M378,1089 C369.163,1089 362,1096.16 362,1105 C362,1113.84 369.163,1121 378,1121 C386.837,1121 394,1113.84 394,1105 C394,1096.16 386.837,1089 378,1089 L378,1089 Z" id="arrow-up-circle" sketch:type="MSShapeGroup"></path> </g> </g> </g></svg>
 			Ahahay
@@ -158,6 +158,6 @@ templ DislikeButton(disliked bool, postID string) {
 
 templ EndOfFeed() {
 	<div class="divider">
-		You reached the bottom, get a Job!
+		You've reached the bottom, get a Job!
 	</div>
 }
