--- a/internal/views/home/form.templ
+++ b/internal/views/home/form.templ
@@ -3,7 +3,7 @@ package home
 templ Form() {
 	<form
 		id="post-form"
-		class="lg:w-2/5 text-xl mx-auto card-body"
+		class="text-xl card-body"
 	>
 		<div class="form-control">
 			<label for="content" class="label">
