--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -21,7 +21,7 @@ templ Post(username string, content string, likeCount int, commentCount int) {
 				<svg class="h-3/4" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="currentColor"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><title>arrow-up-circle</title> <desc>Created with Sketch Beta.</desc> <defs></defs> <g id="Page-1" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd" sketch:type="MSPage"><g id="Icon-Set-Filled" sketch:type="MSLayerGroup" transform="translate(-362.000000, -1089.000000)" fill="currentColor"><path d="M384.535,1105.54 C384.145,1105.93 383.512,1105.93 383.121,1105.54 L379,1101.41 L379,1112 C379,1112.55 378.553,1113 378,1113 C377.447,1113 377,1112.55 377,1112 L377,1101.41 L372.879,1105.54 C372.488,1105.93 371.854,1105.93 371.465,1105.54 C371.074,1105.14 371.074,1104.51 371.465,1104.12 L377.121,1098.46 C377.361,1098.22 377.689,1098.15 378,1098.21 C378.311,1098.15 378.639,1098.22 378.879,1098.46 L384.535,1104.12 C384.926,1104.51 384.926,1105.14 384.535,1105.54 L384.535,1105.54 Z M378,1089 C369.163,1089 362,1096.16 362,1105 C362,1113.84 369.163,1121 378,1121 C386.837,1121 394,1113.84 394,1105 C394,1096.16 386.837,1089 378,1089 L378,1089 Z" id="arrow-up-circle" sketch:type="MSShapeGroup"></path> </g> </g> </g></svg>
 				Yahaha
 			</button>
-			<div class="h-12 w-24 rounded-xl bg-primary font-mono font-black text-2xl text-primary-content text-center flex items-center justify-center">
+			<div class="h-full w-24 rounded-xl bg-primary font-mono font-black text-2xl text-primary-content text-center flex items-center justify-center">
 				{ util.Format(likeCount) }
 			</div>
 			<button class="btn btn-ghost hover:text-primary btn-md text-xl w-40">
@@ -56,28 +56,20 @@ func postUrl(iteration int) string {
 
 templ ManyPost(postDatas []PostData, iteration int) {
 	for _, postData := range postDatas {
-		<div class="w-full card rounded-none mb-10 bg-transparent p-4 text-base-content">
+		<div class="w-full rounded-none card mb-2 p-4 text-base-content">
 			for _, imgSrc := range postData.ImgSrc {
-				<figure class="w-full h-full">
-					<img
-						class="w-full h-full object-cover"
-						src={ imgSrc }
-						alt="Meme"
-					/>
-				</figure>
+				<img
+					class="w-full h-full object-cover"
+					src={ imgSrc }
+					alt="Meme"
+				/>
 			}
 			<div class="card-body mt-4 p-2">
 				<h2 class="card-title text-base-content font-bold">{ postData.Username }</h2>
 				{ postData.Content }
 			</div>
 			@ReactSection(postData.ReactStruct)
-			<div class="divider">
-				<button class="btn btn-ghost">Show {  util.Format(postData.CommentCount) } Comments</button>
-			</div>
-			@manyDummyComments()
-			@manyDummyComments()
-			@manyDummyComments()
-			@manyDummyComments()
+			@CommentSection(postData)
 		</div>
 	}
 	<div
@@ -87,35 +79,6 @@ templ ManyPost(postDatas []PostData, iteration int) {
 		hx-get={ postUrl(iteration + 1) }
 		class="loading loading-spinner loading-lg mx-auto"
 	></div>
-}
-
-templ manyDummyComments() {
-	@DummyComments(true) {
-		@DummyComments(false) {
-			@DummyComments(false) {
-				@DummyComments(false)
-			}
-		}
-	}
-}
-
-templ DummyComments(isRoot bool) {
-	<div class="flex">
-		if !isRoot {
-			<div class="pt-4 divider divider-start divider-horizontal"></div>
-		}
-		<div>
-			<div class="py-2">
-				<div class="mb-2 text-md">
-					Username
-				</div>
-				<div class="text-sm">
-					Content lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.
-				</div>
-			</div>
-			{ children... }
-		</div>
-	</div>
 }
 
 templ ReactSection(reactData ReactData) {
