--- a/pkg/template/base.templ
+++ b/pkg/template/base.templ
@@ -9,6 +9,7 @@ templ Base(title string) {
 			<meta charset="UTF-8"/>
 			<link rel="stylesheet" href="/api/v1/static/style/output.css"/>
 			<script src="https://unpkg.com/htmx.org@1.9.10"></script>
+			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 		</head>
 		<body class="h-min-screen">
 			{ children... }
