--- a/internal/views/home/comment.templ
+++ b/internal/views/home/comment.templ
@@ -4,143 +4,135 @@ package home
 import "github.com/muhhae/lorem-ipsum/internal/views/util"
 
 type CommentData struct {
-	Content  string
-	Username string
+	PostID     string
+	CommentID  string
+	Content    string
+	Username   string
+	ReplyCount int
 }
 
-templ Comments(comments []CommentData) {
-	for _, comment := range comments {
-		<div class="flex">
-			<div class="pt-2 divider divider-start divider-horizontal">
-				<div class="avatar">
-					<div class="w-12 rounded">
-						<img src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg"/>
-					</div>
-				</div>
-			</div>
-			<div>
-				<div class="ml-3 py-2">
-					<div class="text-md">
-						{ comment.Username }
-					</div>
-					<div class="text-sm">
-						{ comment.Content }
-					</div>
-				</div>
-				{ children... }
-			</div>
-		</div>
-	}
-}
-
-templ CommentSection(postData PostData) {
+templ CommentInput(url string) {
 	<div
 		x-data="{ 
-					open: true,
-					showText: 'Hide',
-					toggle() {
-						this.open = !this.open;
-						if (this.open) {
-							this.showText = 'Hide';
-						} else {
-							this.showText = 'Show';
-						}
-					} 
-				}"
+			open: false,
+			toggle() {
+				this.open = !this.open;
+			}
+		}"
+		class="mt-4"
 	>
-		<div class="divider">
-			<button x-on:click="toggle()" class="btn btn-ghost"><span x-text="showText"></span> {  util.Format(postData.CommentCount) } Comments</button>
+		<button x-on:click="toggle()" class="btn btn-outline w-full my-4 text-xl">Add Comment</button>
+		<form
+			hx-post={ url }
+			hx-swap="none"
+			class="w-full join join-vertical"
+			x-show="open"
+		>
+			<textarea name="content" class="join-item textarea textarea-bordered w-full" rows="3" placeholder="Comment..."></textarea>
+			<button type="submit" class="join-item mb-2 btn btn-outline w-full text-lg">Send</button>
+		</form>
+	</div>
+}
+
+templ ReplyInput(url string) {
+	<div
+		x-data="{ 
+			open: false,
+			toggle() {
+				this.open = !this.open;
+			}
+		}"
+	>
+		<button x-on:click="toggle()" class="mb-2 btn btn-xs btn-outline w-full text-md">Reply</button>
+		<form
+			hx-swap="none"
+			hx-post={ url }
+			class="w-full join join-vertical"
+			x-show="open"
+		>
+			<textarea name="content" class="join-item textarea textarea-bordered w-full" rows="3" placeholder="Reply..."></textarea>
+			<button type="submit" class="join-item mb-2 btn btn-xs btn-outline w-full text-md">Send</button>
+		</form>
+	</div>
+}
+
+templ LoadCommentBtn(postID string, commentCount int) {
+	<div
+		x-data="{ 
+			open: false,
+			showText: 'Show',
+			toggle() {
+				this.open = !this.open;
+				if (this.open) {
+					this.showText = 'Hide';
+				} else {
+					this.showText = 'Show';
+				}
+			} 
+		}"
+	>
+		<div class=" divider">
+			<button
+				x-on:click="toggle()"
+				class="btn btn-ghost"
+			><span x-text="showText"></span> {  util.Format(commentCount) } Comments</button>
 		</div>
+		@CommentInput("/api/v1/comment/send/"+postID) {
+		}
 		<div x-show="open">
 			<div
-				x-data="{ 
-					open: false,
-					toggle() {
-						this.open = !this.open;
-					}
-				}"
-			>
-				<button x-on:click="toggle()" class="btn btn-outline w-full mb-4 text-xl">Add Comment</button>
-				<form class="w-full join join-vertical" x-show="open">
-					<textarea name="content" class="join-item textarea textarea-bordered w-full" rows="3" placeholder="Comment..."></textarea>
-					<button type="submit" class="join-item mb-2 btn btn-outline w-full text-lg">Send</button>
-				</form>
-			</div>
-			@Comment(0)
+				id="loader"
+				hx-trigger="intersect"
+				hx-swap="outerHTML"
+				hx-get={ "/api/v1/comment/post/" + postID }
+				class="loading loading-dots loading-xs mx-auto"
+			></div>
 		</div>
 	</div>
 }
 
-templ Comment(i int) {
-	<div class="flex">
-		<div class="pt-2 divider divider-start divider-horizontal">
-			<div class="avatar">
-				<div class="w-12 rounded">
-					<img src="https://daisyui.com/images/stock/photo-1534528741775-53994a69daeb.jpg"/>
-				</div>
-			</div>
+templ LoadReplyBtn(postID string, commentID string, replyCount int) {
+	<div
+		x-data="{ 
+			open: false,
+			showText: 'Show',
+			toggle() {
+				this.open = !this.open;
+				if (this.open) {
+					this.showText = 'Hide';
+				} else {
+					this.showText = 'Show';
+				}
+			} 
+		}"
+	>
+		<div class=" divider">
+			<button
+				x-on:click="toggle()"
+				class="btn btn-xs text-sm btn-ghost"
+			><span x-text="showText"></span> {  util.Format(replyCount) } Replies</button>
 		</div>
-		<div>
-			<div class="ml-3 py-2">
-				<div class="text-md font-black">
-					Username
-				</div>
-				<div class="text-sm">
-					Content lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.
-				</div>
-			</div>
-			if i < 4 {
-				<div
-					x-data="{ 
-					open: true,
-					showText: 'Hide',
-					toggle() {
-						this.open = !this.open;
-						if (this.open) {
-							this.showText = 'Hide';
-						} else {
-							this.showText = 'Show';
-						}
-					} 
-				}"
-				>
-					<div class="divider">
-						<button x-on:click="toggle()" class="btn btn-ghost"><span x-text="showText"></span> {  util.Format(0) } Comments</button>
-					</div>
-					<div x-show="open">
-						<div
-							x-data="{ 
-								open: false,
-								toggle() {
-									this.open = !this.open;
-								}
-							}"
-							class=""
-						>
-							<button x-on:click="toggle()" class="mb-2 btn btn-xs btn-outline w-full text-md">Reply</button>
-							<form class="w-full join join-vertical" x-show="open">
-								<textarea name="content" class="join-item textarea textarea-bordered w-full" rows="3" placeholder="Reply..."></textarea>
-								<button type="submit" class="join-item mb-2 btn btn-xs btn-outline w-full text-md">Send</button>
-							</form>
-						</div>
-						@Comment(i + 1)
-					</div>
-				</div>
-			}
-		</div>
-	</div>
-}
-
-templ manyDummyComments() {
-	@DummyComments() {
-		@DummyComments() {
-			@DummyComments() {
-			}
+		@ReplyInput("/api/v1/comment/send/"+postID+"?replying=" + commentID) {
 		}
+		<div x-show="open">
+			<div
+				id="loader"
+				hx-trigger="intersect"
+				hx-swap="outerHTML"
+				hx-get={ "/api/v1/comment/reply/" + commentID }
+				class="loading loading-dots loading-xs mx-auto"
+			></div>
+		</div>
+	</div>
+}
+
+templ LoadedComment(comments []CommentData) {
+	for _, comment := range comments {
+		@Comment(comment)
 	}
 }
 
-templ DummyComments() {
+templ Comment(c CommentData) {
 	<div class="flex">
 		<div class="pt-2 divider divider-start divider-horizontal">
 			<div class="avatar">
@@ -149,15 +141,15 @@ templ DummyComments() {
 				</div>
 			</div>
 		</div>
-		<div>
-			<div class="ml-3 py-2">
-				<div class="text-md font-black">
-					Username
-				</div>
-				<div class="text-sm">
-					Content lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.
-				</div>
+		<div class="w-full ml-3 py-2">
+			<div class="text-md font-black">
+				{ c.Username }
 			</div>
+			<div class="text-sm">
+				{ c.Content }
+			</div>
+			@LoadReplyBtn(c.PostID, c.CommentID, c.ReplyCount) {
+			}
 		</div>
 	</div>
 }
